2010-06-09 : cmor_axis non-monotnic error was showing incoorect set of bad values
2010-06-09 : changed absolute mean error from CRITICAL to NORMAL if less than an order of magnitude off
2010-06-09 : tables generated with min/max now being 3 sigma (from 2) and (20% form 5%)
2010-06-09 : Coord: depth_coord was wrongly defined as positive up, fixed
2010-06-01 : table generation was sometimes gen same value for valid_min and valid_max, fixed
2010-06-01 : table generation using %.4g instead of %.2g for valid min/max
2010-06-01 : new tables to reflect that
2010-06-01 : updated examples to work with abs min/max from tables
2010-06-01 : edited example to have only 1 file to edit when tweaking the data generation in test fortran/C samples.
2010-06-01 : changed cmor_dataset to trim input arguments, revelant mostly for calendar that was declared as wrong if it had extra spaces
2010-06-01 : fixed error message formating for value less or greater than valid_min/max, now uses nice formatting %.4g instead of unreadable for big numbers: %lf
2010-05-28 : Tagging RC10
2010-05-28 : cmor_checker now checks table md5s in file vs the one passed and vs our control online
2010-05-28 : new tables that include the ok_min/max_mean_absolute value
2010-05-28 : reverted file name construction to use first/last time. BUT added precision for daily and higher frequencies
2010-05-28 : fixed a bug in cmor checker when variable entry was "pop" would break
2010-05-28 : fixed default values of noerror in script from True to cmor.CMOR_CRITICAL
2010-05-27 : switch version tagging from svn to git
2010-05-27 : fixed  abug in test patch number of NetCDF3 version i was using = instead of ==
2010-05-25 : trying a new way to store date in file names for Jamie. Probably going to be reverted
2010-05-24 : changed the way the final file name is constructed, uses time bounds if present, otherwise as before uses time values
2010-05-20 : tagging RC9